front end replacements

--- a/app/assets/stylesheets/style-main.scss.erb
+++ b/app/assets/stylesheets/style-main.scss.erb
@@ -1024,7 +1024,7 @@ font-size: 3.5em;
   
 }
 
-.leoPhoto {
+.mainPhoto {
   margin-top: 5px;
   padding-right: 5px;
   float: left;
@@ -1477,7 +1477,7 @@ font-size: 2em;
 opacity: 1;  
 }
 
-.companyName .leoName {
+.companyName .liName {
   background-color: #333;
   height: 100%;
   width: 100%;
@@ -1779,7 +1779,7 @@ flex-direction: column;
 overflow: hidden;
 }
 
-.leoPhoto {
+.mainPhoto {
 
 float: left;
 width: 30%; 
@@ -1789,7 +1789,7 @@ max-height: 10.125em; /* 210px*/
 max-width: 6.625em; /*154px*/
 }
 
-.leoPhoto img {
+.mainPhoto img {
 padding-top: 5px;
 margin: 0;
 height: 100%;
@@ -2294,7 +2294,7 @@ flex-direction: column;
 overflow: scroll;
 }
 
-.leoPhoto {
+.mainPhoto {
 display: flex;
 width: 30%;
 margin-top: 5px;
@@ -2302,7 +2302,7 @@ max-height: 13.125em; /* 210px*/
 max-width: 9.625em; /*154px*/
 }
 
-.leoPhoto img {
+.mainPhoto img {
 height: 30%;
 width: 100%;
 max-height: 13.125em; /* 210px*/
