--- a/app/views/layouts/tabs/_contactTab.html.erb
+++ b/app/views/layouts/tabs/_contactTab.html.erb
@@ -7,10 +7,9 @@
  <div class="aboutButton" id="aboutButton"><span class="contactButtonText">About Me</span></div>
     <div class="contactText" id="contactText">
 
-      <div class="leoPhoto"><img id="leoPic" src=<%= asset_path 'images/contact/100-photographer.jpg' %> ></div>
+      <div class="mainPhoto"><img id="mainPic" src=<%= asset_path 'images/contact/photographer.jpg' %> ></div>
         <div class="textBlock"><h1 class="photographerTitle">The photographer</h1>
-          <p id="contactPar">Born in Santiago, Chile, but raised in the city of Hamilton in the state of New Jersey, United States. Working full time as an accountant, but my real love lies with photography. I speak a fluent level of Spanish and a Native level of English so
-            I am very confortable holding conversations in either language. Please don't hesitate to get in touch with me in case you run into any inquiries regarding my servicesr. My biggest aspiration is the complete satisfaction of my clients.
+          <p id="contactPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
           <div class="contactButton" id="contactButton"><span class="contactButtonText">Contact Me</span></div>
        </div>
@@ -27,11 +26,11 @@
         
         <div class="contactFormText bottom">Or, message me through:<br>
 
-        <div class="contactImages"><img class="fbIcon" tabindex="0" id="fbMessageButton" src="http://casamiasrestaurant.com/communities/7/000/001/042/387//images/3401337_30x30.jpg">
+        <div class="contactImages"><img class="fbIcon" tabindex="0" id="fbMessageButton" src="images/external/fb-logo.png">
           
           <div class="socialMessageBox" id="fbMessageBox"><div class="closeButton" id="fbMessageBoxClose">x</div>
                 <div class="fb-page" id="fb-iframe"
-                  data-href="https://www.facebook.com/LPAtestpage/" 
+                  data-href="https://www.facebook.com/Slika-Photography-422953634737321/" 
                   data-tabs="messages" 
                   data-width="250" 
                   data-height="300" 
@@ -40,7 +39,7 @@
                     <blockquote></blockquote>
                   </div>
               </div>
-          </div><a href="https://twitter.com/intent/tweet?screen_name=e0plusdev_test" tabindex="0"><img class="twitterIcon-message" src="https://g.twimg.com/dev/documentation/image/Twitter_logo_blue_32.png"></a>
+          </div><a href="https://twitter.com/intent/tweet?screen_name=e0plusdev_test" tabindex="0"><img class="twitterIcon-message" src="images/external/twitter-logo.png"></a>
         </div>
 
         </div>
