--- a/app/views/site_mailer/account_activation.text.erb
+++ b/app/views/site_mailer/account_activation.text.erb
@@ -1,6 +1,6 @@
 <%= @greeting %>  <%= @user.name %>,
 
-You have received an invitation to join Leonardo Antonio Photoart
+You have received an invitation to join Slika Photography
 
 To activate your account, please click the following link:
 
