--- a/app/views/admin/files/files.html.erb
+++ b/app/views/admin/files/files.html.erb
@@ -28,7 +28,10 @@
 
 <span class="action-title">File Manager</span>
 <span class="action-description">Here you can browse the files currently in your S3 bucket</span>
-<p class='action-description'>Notes:<br>Ctrl + left click (or long touch on mobile devices) selects/unselects files</p>
+<p class='action-description'>
+	Notes:<br>Ctrl + left click (or long touch on mobile devices) selects/unselects files
+		  <br>Double click on a folder selects the folder.
+</p>
 
 <div class="upload-dir-container open" id="root">
 
