--- a/app/views/layouts/_bottomBar.html.erb
+++ b/app/views/layouts/_bottomBar.html.erb
@@ -12,11 +12,11 @@
 
       <a href="http://www.twitter.com/thisisaplaceholder" target="_blank"><%= image_tag("/images/external/twitter-logo.png") %></a>
   
-      <a href="http://www.eugenioLopez.cl" target ="_blank"><%= image_tag("/images/external/tube-logo-n.png") %></a>
+      <a href="https://github.com/eugenioLopezRamos/" target ="_blank"><%= image_tag("/images/external/github-logo.png") %></a>
     </div>
 
     <div class="madeBy">
-      <label class="madeByTxt">Made in Valdivia, Chile in July 2016</label>
+      <label class="madeByTxt">Made in Valdivia, Chile</label>
     </div>
 
 
